# radarbase-io

./: .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  index.md  quickstart.md
examples/: build_index.py  open_stream_table.py  open_stream_xarray.py
src/radarbase_io/: __init__.py  convert.py  exceptions.py  fs.py  index.py  layout.py  performance.py  read_table.py  read_xarray.py  schema.py  utils.py
tests/: conftest.py  test_convert.py  test_fs.py  test_index.py  test_layout.py  test_performance.py  test_read_table.py  test_read_xarray.py  test_schema.py  test_smoke.py  test_utils.py
tests/data/sample_project/: README.txt
tests/data/schemas/: schema-android_local_weather.json  schema-android_phone_acceleration.json  schema-android_phone_battery_level.json  schema-android_phone_bluetooth_devices.json  schema-android_phone_call.json  schema-android_phone_contacts.json  schema-android_phone_gyroscope.json  schema-android_phone_light.json  schema-android_phone_magnetic_field.json  schema-android_phone_relative_location.json  schema-android_phone_sms.json  schema-android_phone_sms_unread.json  schema-android_phone_step_count.json  schema-android_phone_usage_event.json  schema-android_phone_usage_event_aggregated.json  schema-android_phone_user_interaction.json  schema-android_processed_audio.json  schema-application_device_info.json  schema-application_record_counts.json  schema-application_server_status.json  schema-application_time_zone.json  schema-application_uptime.json  schema-connect_fitbit_activity_log.json  schema-connect_fitbit_intraday_calories.json  schema-connect_fitbit_intraday_heart_rate.json  schema-connect_fitbit_intraday_steps.json  schema-connect_fitbit_sleep_classic.json  schema-connect_fitbit_sleep_stages.json  schema-connect_fitbit_time_zone.json  (+10 more)
