[project]
name = "radarbase-io"
version = "0.1.0"
description = "I/O utilities for RADAR-base datasets."
readme = "README.md"
authors = [
    { name = "Ao Zhang", email = "billyzhang1229@gmail.com" }
]
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["radar", "radar-base", "io"]
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
