[project]
name = "radarbase-io"
version = "0.1.0"
description = "I/O utilities for RADAR-base datasets."
readme = "README.md"
authors = [
    { name = "Ao Zhang", email = "billyzhang1229@gmail.com" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["radar", "radar-base", "io"]
dependencies = [
    "bcrypt>=5.0.0",
    "dask[distributed]>=2025.12.0",
    "fsspec>=2025.12.0",
    "numpy>2.4.0",
    "pandas<3.0.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "sshfs>=2025.11.0",
    "xarray>=2025.12.0",
]

[project.optional-dependencies]
notebook = [
    "marimo[recommended]>=0.18.4",
]
bokeh = [
    "bokeh>=3.8.2",
]

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/radarbase_io/__init__.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
